// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should support js output format for additionalProperties errors 1`] = `
Array [
  Object {
    "end": Object {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "error": " Property baz is not expected to be here",
    "path": "",
    "start": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
  },
]
`;

exports[`Main should support js output format for default errors 1`] = `
Array [
  Object {
    "end": undefined,
    "error": "/id: type must be number",
    "path": "/id",
    "start": Object {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
  },
]
`;

exports[`Main should support js output format for enum errors 1`] = `
Array [
  Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "error": "/id must be equal to one of the allowed values: foo, bar",
    "path": "/id",
    "start": Object {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "suggestion": "Did you mean bar?",
  },
]
`;

exports[`Main should support js output format for patternProperties errors 1`] = `
Array [
  Object {
    "end": Object {
      "column": 261,
      "line": 1,
      "offset": 260,
    },
    "error": "/components/securitySchemes Property \\"Basic Access Authentication\\" must match pattern ^[a-zA-Z0-9._-]+$",
    "path": "/components/securitySchemes",
    "start": Object {
      "column": 244,
      "line": 1,
      "offset": 243,
    },
  },
  Object {
    "end": undefined,
    "error": "/components/securitySchemes: propertyNames property name must be valid",
    "path": "/components/securitySchemes",
    "start": Object {
      "column": 262,
      "line": 1,
      "offset": 261,
    },
  },
]
`;

exports[`Main should support js output format for required errors 1`] = `
Array [
  Object {
    "error": "/nested must have required property 'id'",
    "path": "/nested",
    "start": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
  },
]
`;

exports[`Main should support js output format for unevaluatedProperties errors 1`] = `
Array [
  Object {
    "end": Object {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "error": " Property baz is not expected to be here",
    "path": "",
    "start": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
  },
]
`;
